# UCI_AutoDRIVE_labs

./: .gitignore  README.md  example_f1tenth.py  flake.nix  macos.md  nixos.md  pyproject.toml
src/example/: example_f1tenth.py
src/lab1/: lab1.py
